# anyseq

./: .gitignore  CMakeLists.txt
scripts/: vivado_proj.tcl
scripts/hls_postproc/: align_postproc.cpp
scritps/hls_postproc/: align_postproc.cpp  anyseq_hls_postproc  input_example.cpp
src/: align.impala  export.impala  export_hls_global.impala  export_hls_local.impala  export_hls_semiglobal.impala  iteration_hls.impala  mapping_fpga.impala  scoring.impala  scoring_acc.impala  scoring_cpu.impala  scoring_hls.impala  sysarr.impala  traceback_lintime.impala  utils.impala  write_pe_count.cmake
src/backend/: backend_amdgpu.impala  backend_avx.impala  backend_cpu.impala  backend_cuda.impala  backend_hls.impala  backend_nvvm.impala  backend_opencl.impala
src/hls/: align.h.in  align_global.cpp  align_global.h.in  align_local.cpp  align_local.h.in  align_semiglobal.cpp  align_semiglobal.h.in  align_tb.cpp  postproc.cmake  scheme_global.impala  scheme_local.impala  scheme_semiglobal.impala  tb_global.cpp.in  tb_local.cpp.in  tb_semiglobal.cpp.in  vivado_proj.tcl.in  write_pe_count.cmake
